Updating team, header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,23 +5,20 @@
 		<div class="col-sm-4">
 			
 		  <p>&copy 2019 MFIS</p>
-      <p>Somos parte de la <a href="https://www.exa.unrc.edu.ar/" target="_blank">Facultad de Ciencias Exactas, Físico-Químicas y Naturales</a> en la <a href="https://www.unrc.edu.ar/" target="_blank">Universidad Nacional de Río Cuarto</a>.</p>
-            
-
+      <p>We are part of the <a href="https://www.exa.unrc.edu.ar/" target="_blank">Computer Science Department</a> at the <a href="https://www.unrc.edu.ar/" target="_blank">University of Rio Cuarto</a>, Argentina.</p>
 		   <p>  </p><p>
             		  
             
 		</div>
 		<div class="col-sm-4"></div>
 		<div class="col-sm-4">
-		  Contacto:<br />
-		  Departamento de Computación<br />
-		  <a href="https://www.exa.unrc.edu.ar/" target="_blank">Facultad de Ciencias Exactas, Físico-Químicas y Naturales</a><br />
-		  <a href="https://www.unrc.edu.ar/" target="_blank">Universidad Nacional de Río Cuarto</a><br />
+		  Contact:<br />
+		  Computer Science Department<br />
+		  <a href="https://www.exa.unrc.edu.ar/" target="_blank">FCEFQyN</a><br />
+		  <a href="https://www.unrc.edu.ar/" target="_blank">University of Rio Cuarto</a><br />
 		  Ruta Nacional No. 36, Km. 601 <br />
 		  Código Postal X5804BYA <br />
-		  Río Cuarto, Córdoba, Argentina <br />
-            (<a href="https://goo.gl/maps/sHnziH6tHMMYmUt3A" target="_blank">Maps</a>)
+		  Río Cuarto, Córdoba, Argentina <br /> (<a href="https://goo.gl/maps/sHnziH6tHMMYmUt3A" target="_blank">Maps</a>)
 		</div>
 	  </div>
 	</div>
