Adding images in home and including twitter feed

--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,11 +2,10 @@
 layout: default
 ---
 
-  <div id="homeid" class="col-sm-8">
-        <h1>Welcome to MFIS!</h1>
-
+<div id="homeid" class="col-sm-8">
+	<h1>Welcome to MFIS!</h1>
 	{{ content }}
-  </div>
-  <div id="newsid" class="col-sm-4" >
-	{% include news.html %}
-  </div>
+</div>
+<div class='jekyll-twitter-plugin col-sm-4' align="center">
+	{% twitter https://twitter.com/escuelaRio maxwidth=500 limit=5 %}
+</div>
