Improving twitter feed

--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <div id="homeid" class="col-sm-8">
-	<h1>Welcome to MFIS!</h1>
+	<!--h2>Formal Methods and Software Engineering</h2-->
 	{{ content }}
 </div>
-<div class='jekyll-twitter-plugin col-sm-4' align="center">
-	{% twitter https://twitter.com/escuelaRio maxwidth=500 limit=5 %}
+<div class='col-sm-4' style="border-radius: 20px;border: 2px solid #000000;">
+	<a class="twitter-timeline" data-width="300" data-height="700" href="https://twitter.com/dcexaunrc?ref_src=twsrc%5Etfw">Tweets by dcexaunrc</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
