--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ img { margin-bottom: 24px;
 
 body {
   padding-top: 70px;
-  background-color: #FAFAFA;
+  background-color: #FFFFFF;
   color: #000000;
 }
 
