--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		<div class="col-sm-4">
 			
 		  <p>&copy 2020 MFIS</p>
-      <p>We are part of the <a href="https://www.exa.unrc.edu.ar/" target="_blank">Computer Science Department</a> at the <a href="https://www.unrc.edu.ar/" target="_blank">University of Rio Cuarto</a>, Argentina.</p>
+      <p>We are part of the <a href="https://dc.exa.unrc.edu.ar/" target="_blank">Computer Science Department</a> at the <a href="https://www.unrc.edu.ar/" target="_blank">University of Rio Cuarto</a>, Argentina.</p>
 		   <p>  </p><p>
             		  
             
