--- a/css/main.scss
+++ b/css/main.scss
@@ -80,6 +80,10 @@ firstp {
   padding-right: 16px;
 }
 
+.col-sm-6 {
+  padding-left: 50px;
+}
+
 /* Grid overrides */
 .col-sm-4 {
   padding-left: 26px;
