--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/people">People</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/projects">Projects</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/tools">Tools</a></li>
 	  </ul>
 	</div>
   </div>
